@@ -1,9 +1,10 @@
 #!/usr/bin/env python
 
 from setuptools import setup
-import sys
 
-install_requires = []
+install_requires = [
+    'six>=1.6.1'
+]
 
 setup(
     name='proof',
