@@ -4,6 +4,7 @@ envlist = py26,py27,py33,py34,pypy
 [testenv]
 deps=
     nose>=1.1.2
+    six>=1.6.1
 commands=nosetests
 
 [testenv:py27]
