@@ -1,6 +1,9 @@
 0.3.0
 -----
 
+* Fix errors when caching unicode analysis function names.
+* Fix errors when caching unicode source. (#10)
+* Add six dependency.
 * Add decorator and logic for analysis functions that are never cached. (#5)
 
 0.2.0
